--- a/index.html
+++ b/index.html
@@ -12,6 +12,7 @@
             <div class="stock-label">Aktueller Kurs:</div>
             <div class="stock-price" id="stockPrice">100.00 €</div>
         </div>
+        <canvas id="chart" width="380" height="180"></canvas>
         <div class="controls">
             <button id="buyBtn">Kaufen</button>
             <button id="sellBtn">Verkaufen</button>
@@ -22,6 +23,7 @@
         </div>
         <div class="message" id="message"></div>
     </div>
+    <script src="https://cdn.jsdelivr.net/npm/chart.js"></script>
     <script src="main.js"></script>
 </body>
 </html>
